[package]
name = "relay"
description = "Hot-updatable reverse proxy"
version = "0.1.0"
authors = ["Theo Bulut <vertexclique@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lever = "0.1"
nuclei = { version = "0.1.3", default-features = false, features = ["iouring"] }
anyhow = "1.0"
async-dup = "1.2.2"
async-h1 = "2.3.2"
http-types = "2.11.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
clap = "2.33"